[package]
authors = ["David Renshaw <david@sandstorm.io>"]
description = "symbolic execution engine for rust"
license =  "MIT/Apache-2.0"
repository = "https://github.com/dwrensha/seer"
name = "seer"
version = "0.0.1"

[[bin]]
doc = false
name = "seer"

[dependencies]

# horrible hack: we vendor byteorder so that we can publish on crates.io
# while depending on the 'i128' feature, which is not yet on crates.io
#byteorder = { git = "https://github.com/burntsushi/byteorder.git", features = ["i128"]}

env_logger = "0.3.3"
log = "0.3.6"
log_settings = "0.1.1"
cargo_metadata = "0.1"
seer-z3 = "0.1.0"

[dev-dependencies]
compiletest_rs = "0.2.6"
