[package]
authors = ["David Renshaw <dwrenshaw@gmail.com>"]
description = "symbolic execution engine for rust"
license =  "MIT/Apache-2.0"
repository = "https://github.com/dwrensha/seer"
name = "seer"
version = "0.0.3"

readme = "README.md"

[[bin]]
doc = false
name = "seer"

[[bin]]
doc = false
name = "cargo-seer"

[dependencies]

byteorder = { version = "1.1", features = ["i128"]}
env_logger = "0.3.3"
log = "0.3.6"
log_settings = "0.1.1"
cargo_metadata = "0.1"
seer-z3 = "0.1.0"

[dev-dependencies]
compiletest_rs = "0.3.5"
